2005-02-02  Mike Kestner  <mkestner@novell.com>

	* generator/Makefile.am : remove source file.
	* generator/Signal.cs : generate marshaling callbacks and use new
	GLib.Signal marshaling class for events.
	* generator/SignalHandler.cs : kill. byebye SignalCallback subclasses.
	* glib/Makefile.am : update source files.
	* glib/GLibSharp.voidObjectIntPtrSignal.cs : kill.
	* glib/Object.cs : mark the old Before/After props Obsolete. Use
	GLib.Signal for the notify prop methods.
	* glib/Signal.cs : new signal marshaling class.  It manages all the 
	ConnectBefore/After stuff internally and connects itself to the native
	object using GCHandles and DestroyNotify lifecycle management.
	* glib/SignalCallback.cs : mark Obsolete.
	[Fixes #72018 and #69847]

2005-02-01  Fredrik Nilsson  <jymdman@home.se>

	* glib/Marshaller.cs : DateTime marshaling fix.

2005-01-31  Mike Kestner  <mkestner@novell.com>

	* gtk/FileChooserDialog.custom : move backend to first param to
	avoid conflicts with button names in overloaded ctor.

2005-01-31  Mike Kestner  <mkestner@novell.com>

	* generator/SymbolTable.cs : handle unsigned-*.
	* parser/gapi2xml.pl : handle const unsigned * parameters. Also fix
	a G_GNUC_PRINTF parsing bug exposed by a GMime.
	* */*-api.raw : regen.
	[Fixes #71825]

2005-01-28  Mike Kestner  <mkestner@novell.com>

	* generator/ReturnValue.cs : use ToNativeReturnType for ToNativeType
	instead of MarshalType.
	* generator/Signal.cs : deal with boxed return values. beef up return
	handling in the default handler generation code.
	* generator/SignalHandler.cs : use ToNative return types for native 
	callbacks. Remove redundant casting/conversion in callback impl.
	[Fixes #71899]

2005-01-28  Dan Winship  <danw@novell.com>

	* glib/Object.cs (AddNotification, RemoveNotification): methods to
	subscribe to the "notify" signal (with property details). [#71684]
	* glib/GLibSharp.voidObjectIntPtrSignal.cs: autogenerated, for
	notifications