@@ -1,5 +1,9 @@
 2005-02-02  Mike Kestner  <mkestner@novell.com>
 
+	* generator/Signal.cs : kill unnecessary BaseName prop.
+
+2005-02-02  Mike Kestner  <mkestner@novell.com>
+
 	* generator/Makefile.am : remove source file.
 	* generator/Signal.cs : generate marshaling callbacks and use new
 	GLib.Signal marshaling class for events.
